# npmetis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  debug.sh  init.sh  release.sh  run.py  run.sh
cppmetis/: CMakeLists.txt  command_line.h  main.cc  mpi_main.cc  mpi_partition.cc  mpi_partition.h  mt_main.cc  mt_partition.cc  mt_partition.h  partition.cc  partition.h  timer.h  to_sym.cc  types.h  utils.cc  utils.h
pmetis/: CMakeLists.txt  main.cc  mpi_main.cc  mpi_partition.cc  mpi_partition.h  partition.cc  partition.h  timer.h  utils.cc  utils.h
pymetis/: CMakeLists.txt  binding.cc  common.h  make_sym.cc  make_sym.h  metis_assignment.cc  metis_assignment.h  mt_binding.cc  mt_metis_assignment.cc  mt_metis_assignment.h
